ipc/ipdl/test/ipdl/error/ReplyPrioWithoutReturns.ipdl
//error: non-returns message `NormalPrio' cannot specify [ReplyPriority]
async protocol ReplyPrioWithoutReturns
{
child:
  [ReplyPriority=normal] async NormalPrio();
};
